model new version with priority systems

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,30 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 309,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['Unnamed: 0', 'serialno', 'familysize', 'income', 'race', 'ethnicity',\n",
-      "       'numchildren', 'numelderly', 'veteran', 'disability', 'waittime',\n",
-      "       'topchoice'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# inputs\n",
-    "applicant_arrival = 0.03\n",
-    "applicant_departure = 0.03\n",
-    "vacancy_rate = \n"
+    "# applicant_arrival = 0.03\n",
+    "# applicant_departure = 0.03\n",
+    "# vacancy_rate = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,56 +42,64 @@
     "    else:\n",
     "        preferences = [5]\n",
     "    \n",
-    "    output = [family_size] + random.sample(preferences, len(preferences))\n",
-    "    return output"
+    "    output = [min(family_size, 6)] + random.sample(preferences, len(preferences))\n",
+    "    return output\n",
+    "\n",
+    "def housing_vacancy(stock):\n",
+    "    \n",
+    "    # Probability weights for each housing type (reverse proportion to the key size)\n",
+    "    weights = [1 / key for key in stock]\n",
+    "\n",
+    "    # Distribute 80 units randomly across types with weighted choice\n",
+    "    units_to_add = 80\n",
+    "    while units_to_add > 0:\n",
+    "        random_type = random.choices(list(stock.keys()), weights=weights)[0]\n",
+    "        add_count = random.randint(1, units_to_add)  # Random count to add\n",
+    "\n",
+    "        # Increment the randomly chosen type by the add_count\n",
+    "        stock[random_type] += add_count\n",
+    "\n",
+    "        units_to_add -= add_count  # Reduce the remaining units to add\n",
+    "\n",
+    "    return stock\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import file\n",
     "df = pd.read_csv(\"Eligible_Applicants.csv\")\n",
     "\n",
-    "# saving backup\n",
-    "safe = df\n",
-    "\n",
     "# filtering eligible applicants \n",
     "df = df[df['familysize'] != 0] # removing applicants with family size = 0\n",
     "df = df[df['income'] != 0] # removing applicants with income = 0\n",
-    "df = df.drop(df.columns[0:2], axis = 1)\n",
-    "df = df.loc[df.index.repeat(30)].reset_index(drop=True)\n",
+    "df = df[df['race'] != 0]\n",
+    "df = df.drop(df.columns[0:1], axis = 1)\n",
+    "df = df[~(df['income'] > 14160 + (7710 * df['familysize']))]\n",
+    "# df = df.loc[df.index.repeat(20)].reset_index(drop=True)\n",
+    "\n",
     "\n",
     "preferences = []\n",
     "for index, row in df.iterrows():\n",
     "    preferences.append(preference_creation(int(row['familysize'])))\n",
     "\n",
-    "df['preferences'] = preferences\n"
+    "df['preferences'] = preferences \n",
+    "\n",
+    "# saving original\n",
+    "safe = df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20513\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Unit:\n",
-    "    def __init__(self, capacity, occupied):\n",
-    "        self.capacity = capacity\n",
-    "        self.occupied = occupied\n",
-    "\n",
     "# housing unit stock\n",
-    "housing_units_stock = {\n",
+    "housing_units = {\n",
     "    1: 9820,\n",
     "    2: 4349,\n",
     "    3: 3107,\n",
@@ -112,56 +108,89 @@
     "    6: 569\n",
     "}\n",
     "\n",
-    "housing_units = [Unit(capacity, 0) for capacity, count in housing_units_stock.items() for _ in range(count)]"
+    "for key in housing_units.keys():\n",
+    "    housing_units[key] = housing_units[key] // 25\n",
+    "print(f\"Total Housing Units Available: {sum(housing_units.values())}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "waitlist = df\n",
-    "\n",
-    "periods = 1\n",
-    "\n",
-    "for _ in range(periods):\n",
-    "    if waitlist.shape[0] == 0:\n",
-    "        break\n",
-    "    \n",
-    "    for index, applicant in waitlist.iterrows():\n",
-    "\n",
-    "        while applicant['ranking'] == 0:\n",
-    "            for rank in applicant['preferences']:\n",
-    "                for unit in housing_units:\n",
-    "                    if (unit.capacity == rank) and (unit.occupied == 0):\n",
-    "                        unit.occupied = 1\n",
-    "                        applicant['ranking'] = applicant['preferences'].index(rank) + 1\n",
-    "                        break\n",
-    "            break\n",
-    "    \n",
-    "        if applicant['ranking'] > 0:\n",
-    "            waitlist.drop(index)\n",
-    "                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(104220, 11)\n",
-      "(104220, 11)\n"
+      "Total Housing Units Available: 817\n"
      ]
     }
    ],
    "source": [
-    "print(df.shape)\n",
-    "print(waitlist.shape)"
+    "priorities = ['income', 'numchildren', 'numelderly', 'veteran', 'disability']\n",
+    "\n",
+    "for priority in priorities:\n",
+    "    # reset dataframe to infinite wait times and ranking = 0\n",
+    "    df = safe\n",
+    "\n",
+    "    # sort dataframe by priority system and save to waitlist\n",
+    "    if priority == 'income':\n",
+    "        waitlist = df.sort_values(by=priority, ascending=True)\n",
+    "    else:\n",
+    "        waitlist = df.sort_values(by=priority, ascending=False)\n",
+    "\n",
+    "    # maximum 1e6 periods, end when waitlist is empty\n",
+    "    period = 1e6\n",
+    "    for _ in range(int(period)):\n",
+    "\n",
+    "        # break when waitlist is empty\n",
+    "        if waitlist.shape[0] == 0:\n",
+    "            break\n",
+    "        # add x number of housing units per cycle\n",
+    "        housing_units = housing_vacancy(housing_units)\n",
+    "\n",
+    "        # for each applicant in the wait list\n",
+    "        for _, applicant in waitlist.iterrows():\n",
+    "\n",
+    "            # identify the serial number\n",
+    "            serial_no = applicant['serialno']\n",
+    "\n",
+    "            # for each choice in the preferences list\n",
+    "            for rank in applicant['preferences']:\n",
+    "\n",
+    "                # if that housing size/type is available\n",
+    "                if housing_units[rank] > 0:\n",
+    "\n",
+    "                    # set that housing choice to be their \"ranking\" (the preference they are matched with)\n",
+    "                    df.loc[df['serialno'] == serial_no, 'ranking'] = applicant['preferences'].index(rank) + 1\n",
+    "\n",
+    "                    # reduce that available housing type by 1\n",
+    "                    housing_units[rank] -= 1\n",
+    "\n",
+    "                    # remove them from the waitlist\n",
+    "                    waitlist = waitlist[waitlist['serialno'] != serial_no]\n",
+    "                    break\n",
+    "        \n",
+    "        # for all umatched, add 1 to waittime\n",
+    "        df.loc[df['ranking'] == 0, 'waittime'] += 1\n",
+    "    \n",
+    "    # save df\n",
+    "    filename = f'results/dfs/trial_2/housing_allocation_{priority}.csv'\n",
+    "    df.to_csv(filename, index = False)\n",
+    "\n",
+    "    # Group by 'Race' and calculate the percentage of top choice within each group\n",
+    "    result = df.groupby('race').agg(\n",
+    "        Percentage=('ranking', lambda x: (x == 1).sum() / len(x) * 100),\n",
+    "        AverageWaitTime=('waittime', 'mean')\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    # Round 'Percentage' to 2 decimal points and format as percentage\n",
+    "    result['Percentage'] = result['Percentage'].map('{:.2f}%'.format)\n",
+    "\n",
+    "    result.columns = ['Race', 'Percentage of Top Choice', 'Average Wait Time']\n",
+    "\n",
+    "    result.to_csv(f'results/stats/trial_2/housing_statistics_{priority}.csv', index=False)\n",
+    "\n"
    ]
   }
  ],
