Updates from Overleaf

--- a/doc/Mid Project Reporting/references.bib
+++ b/doc/Mid Project Reporting/references.bib
@@ -53,3 +53,27 @@
   pages={69-101},
   year={1996}
 }
+
+@inproceedings{formulaeval,
+  title={Fifty Years of Formula Fairness},
+  author={Harold Bunce; Todd Richardson; Rob Collinson; Greg Miller},
+  booktitle={PD&R Edge},
+  year={2023}
+}
+
+@inproceedings{formulaeval2,
+  title={Empirical observation of negligible fairness-accuracy trade-offs in machine learning for public policy},
+  author={Kit T. Rodolfa, Hemank Lamba, Rayid Ghani},
+  booktitle={arXiv},
+  year={2020}
+}
+
+@inproceedings{formulaeval3,
+  title={Fairness in Contextual Resource Allocation Systems: Metrics and Incompatibility Results},
+  author={Nathanael Jo, Bill Tang, Kathryn Dullerud, Sina Aghaei, Eric Rice, Phebe Vayanos},
+  booktitle={arXiv},
+  year={2022}
+}
+
+
+https://www.hud.gov/sites/dfiles/OCHCO/documents/27061.pdf
