updated some variablels

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# applicant_arrival = 0.03\n",
     "# applicant_departure = 0.03\n",
-    "# vacancy_rate = 0.05"
+    "vacancy_rate = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,10 @@
     "    # Probability weights for each housing type (reverse proportion to the key size)\n",
     "    weights = [1 / key for key in stock]\n",
     "\n",
-    "    # Distribute 80 units randomly across types with weighted choice\n",
-    "    units_to_add = 80\n",
+    "    \n",
+    "    # Distribute 80 units (~10%) randomly across types with weighted choice\n",
+    "    units_to_add = 80 # int(vacancy_rate * 817.0)\n",
+    "    \n",
     "    while units_to_add > 0:\n",
     "        random_type = random.choices(list(stock.keys()), weights=weights)[0]\n",
     "        add_count = random.randint(1, units_to_add)  # Random count to add\n",
@@ -66,12 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total eligible applicants: 3473\n"
+     ]
+    }
+   ],
    "source": [
     "# import file\n",
     "df = pd.read_csv(\"Eligible_Applicants.csv\")\n",
+    "\n",
+    "# https://www.habc.org/habc-information/about-us/news/habc-reopens-public-housing-waiting-list/\n",
     "\n",
     "# filtering eligible applicants \n",
     "df = df[df['familysize'] != 0] # removing applicants with family size = 0\n",
@@ -89,14 +101,23 @@
     "df['preferences'] = preferences \n",
     "\n",
     "# saving original\n",
-    "safe = df"
+    "safe = df\n",
+    "print(f\"Total eligible applicants: {len(df)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Housing Units Available: 1024\n"
+     ]
+    }
+   ],
    "source": [
     "# housing unit stock\n",
     "housing_units = {\n",
@@ -108,26 +129,22 @@
     "    6: 569\n",
     "}\n",
     "\n",
+    "# set initial vacancy rate\n",
+    "\n",
     "for key in housing_units.keys():\n",
-    "    housing_units[key] = housing_units[key] // 25\n",
+    "    housing_units[key] = int(housing_units[key] * vacancy_rate)\n",
     "print(f\"Total Housing Units Available: {sum(housing_units.values())}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Housing Units Available: 817\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "priorities = ['income', 'numchildren', 'numelderly', 'veteran', 'disability']\n",
+    "\n",
+    "# For those on the waitlist, find matching, vacant units\n",
     "\n",
     "for priority in priorities:\n",
     "    # reset dataframe to infinite wait times and ranking = 0\n",
@@ -139,8 +156,8 @@
     "    else:\n",
     "        waitlist = df.sort_values(by=priority, ascending=False)\n",
     "\n",
-    "    # maximum 1e6 periods, end when waitlist is empty\n",
-    "    period = 1e6\n",
+    "    # maximum 12*5 periods (once a month for 5 years), end when waitlist is empty\n",
+    "    period = 12*5\n",
     "    for _ in range(int(period)):\n",
     "\n",
     "        # break when waitlist is empty\n",
@@ -175,7 +192,7 @@
     "        df.loc[df['ranking'] == 0, 'waittime'] += 1\n",
     "    \n",
     "    # save df\n",
-    "    filename = f'results/dfs/trial_2/housing_allocation_{priority}.csv'\n",
+    "    filename = f'results/dfs/trial_3/housing_allocation_{priority}.csv'\n",
     "    df.to_csv(filename, index = False)\n",
     "\n",
     "    # Group by 'Race' and calculate the percentage of top choice within each group\n",
@@ -189,14 +206,21 @@
     "\n",
     "    result.columns = ['Race', 'Percentage of Top Choice', 'Average Wait Time']\n",
     "\n",
-    "    result.to_csv(f'results/stats/trial_2/housing_statistics_{priority}.csv', index=False)\n",
+    "    result.to_csv(f'results/stats/trial_3/housing_statistics_{priority}.csv', index=False)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
