--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "Name: w_income, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -171,9 +171,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 82\u001b[0m\n\u001b[1;32m     80\u001b[0m         df_output\u001b[38;5;241m.\u001b[39miloc[(experiment_no\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m8\u001b[39m):(experiment_no\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m8\u001b[39m)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m8\u001b[39m, count \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5\u001b[39m] \u001b[38;5;241m=\u001b[39m result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPercentage of Top Choice\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     81\u001b[0m         df_output\u001b[38;5;241m.\u001b[39miloc[(experiment_no\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m8\u001b[39m):(experiment_no\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m8\u001b[39m)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m8\u001b[39m, count \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m10\u001b[39m] \u001b[38;5;241m=\u001b[39m [wait_time_fairness] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m8\u001b[39m\n\u001b[0;32m---> 82\u001b[0m         df_output\u001b[38;5;241m.\u001b[39miloc[(experiment_no\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m8\u001b[39m):(experiment_no\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m8\u001b[39m)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m8\u001b[39m, count \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m15\u001b[39m] \u001b[38;5;241m=\u001b[39m [top_choice_fairness] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m8\u001b[39m\n\u001b[1;32m     84\u001b[0m         count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;28mprint\u001b[39m(df_output)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:846\u001b[0m, in \u001b[0;36m_LocationIndexer.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m    844\u001b[0m     key \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39mapply_if_callable(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj)\n\u001b[1;32m    845\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_setitem_indexer(key)\n\u001b[0;32m--> 846\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_has_valid_setitem_indexer(key)\n\u001b[1;32m    848\u001b[0m iloc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miloc\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39miloc\n\u001b[1;32m    849\u001b[0m iloc\u001b[38;5;241m.\u001b[39m_setitem_with_indexer(indexer, value, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:1550\u001b[0m, in \u001b[0;36m_iLocIndexer._has_valid_setitem_indexer\u001b[0;34m(self, indexer)\u001b[0m\n\u001b[1;32m   1548\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_integer(i):\n\u001b[1;32m   1549\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(ax):\n\u001b[0;32m-> 1550\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miloc cannot enlarge its target object\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1551\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(i, \u001b[38;5;28mdict\u001b[39m):\n\u001b[1;32m   1552\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miloc cannot enlarge its target object\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;32m/Users/pokharel/cpsc464final/model.ipynb Cell 6\u001b[0m line \u001b[0;36m8\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pokharel/cpsc464final/model.ipynb#W5sZmlsZQ%3D%3D?line=79'>80</a>\u001b[0m         df_output\u001b[39m.\u001b[39miloc[(experiment_no\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m):(experiment_no\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m)\u001b[39m+\u001b[39m\u001b[39m8\u001b[39m, count \u001b[39m+\u001b[39m \u001b[39m5\u001b[39m] \u001b[39m=\u001b[39m result[\u001b[39m'\u001b[39m\u001b[39mPercentage of Top Choice\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pokharel/cpsc464final/model.ipynb#W5sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m         df_output\u001b[39m.\u001b[39miloc[(experiment_no\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m):(experiment_no\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m)\u001b[39m+\u001b[39m\u001b[39m8\u001b[39m, count \u001b[39m+\u001b[39m \u001b[39m10\u001b[39m] \u001b[39m=\u001b[39m [wait_time_fairness] \u001b[39m*\u001b[39m \u001b[39m8\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pokharel/cpsc464final/model.ipynb#W5sZmlsZQ%3D%3D?line=81'>82</a>\u001b[0m         df_output\u001b[39m.\u001b[39miloc[(experiment_no\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m):(experiment_no\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m)\u001b[39m+\u001b[39m\u001b[39m8\u001b[39m, count \u001b[39m+\u001b[39m \u001b[39m15\u001b[39m] \u001b[39m=\u001b[39m [top_choice_fairness] \u001b[39m*\u001b[39m \u001b[39m8\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pokharel/cpsc464final/model.ipynb#W5sZmlsZQ%3D%3D?line=83'>84</a>\u001b[0m         count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pokharel/cpsc464final/model.ipynb#W5sZmlsZQ%3D%3D?line=85'>86</a>\u001b[0m \u001b[39mprint\u001b[39m(df_output)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:846\u001b[0m, in \u001b[0;36m_LocationIndexer.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m    844\u001b[0m     key \u001b[39m=\u001b[39m com\u001b[39m.\u001b[39mapply_if_callable(key, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj)\n\u001b[1;32m    845\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_setitem_indexer(key)\n\u001b[0;32m--> 846\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_valid_setitem_indexer(key)\n\u001b[1;32m    848\u001b[0m iloc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39miloc\u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39miloc\n\u001b[1;32m    849\u001b[0m iloc\u001b[39m.\u001b[39m_setitem_with_indexer(indexer, value, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:1550\u001b[0m, in \u001b[0;36m_iLocIndexer._has_valid_setitem_indexer\u001b[0;34m(self, indexer)\u001b[0m\n\u001b[1;32m   1548\u001b[0m \u001b[39melif\u001b[39;00m is_integer(i):\n\u001b[1;32m   1549\u001b[0m     \u001b[39mif\u001b[39;00m i \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(ax):\n\u001b[0;32m-> 1550\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mIndexError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39miloc cannot enlarge its target object\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   1551\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(i, \u001b[39mdict\u001b[39m):\n\u001b[1;32m   1552\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mIndexError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39miloc cannot enlarge its target object\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[0;31mIndexError\u001b[0m: iloc cannot enlarge its target object"
      ]
     }
@@ -260,7 +260,7 @@
     "        df_output.iloc[(experiment_no*8):(experiment_no*8)+8, count] = result['Average Wait Time']\n",
     "        df_output.iloc[(experiment_no*8):(experiment_no*8)+8, count + 5] = result['Percentage of Top Choice']\n",
     "        df_output.iloc[(experiment_no*8):(experiment_no*8)+8, count + 10] = [wait_time_fairness] * 8\n",
-    "        df_output.iloc[(experiment_no*8):(experiment_no*8)+8, count + 15] = [top_choice_fairness] * 8\n",
+    "       # df_output.iloc[(experiment_no*8):(experiment_no*8)+8, count + 15] = [top_choice_fairness] * 8\n",
     "\n",
     "        count += 1\n",
     "\n",
